--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 	</head>
 	<body>
 		<a href="./pages_html/profil.html" class="profil">
-			<img src="./cosmetics/homme.png" id="profileImg" width="100%" height="100%"></img>
+			<img src="./cosmetics/homme.png" id="profileImg" width="110%" height="110%"></img>
 			<h3 id="pseudo">name</h3>
 		</a>
+		
 		<h1 class="titre-principal">Morpion 2000</h1>
 		
 		<div class="boutons">
-			<div class="btn">LOACAL</div>
+			<a href="./pages_html/morpionLocal.html"><div class="btn" >LOCAL</div></a>
 			<div class="btn">ONLINE</div>
 			<div class="btn">ORDINATEUR</div>
 		</div>
