--- a/pages_html/morpionLocal.html
+++ b/pages_html/morpionLocal.html
@@ -11,11 +11,16 @@
 <body>
     <h1>Jeu de Morpion</h1>
     <div id="profil">
-        <img src="../cosmetics/homme.png" id="profileImg" ></img>
-        <h3 id="pseudo">name</h3>
-        <img src="../cosmetics/homme.png" id="profileInv" ></img>
-        <h3>invité</h3>
-    </div>
+		<div class="joueur" id="joueur1">
+			<img src="" id="profileImg" alt="Joueur 1">
+			<h3 id="pseudo">name</h3>
+		</div>
+		<div class="joueur" id="joueur2">
+			<img src="../cosmetics/homme0.png" id="profileInv" alt="Invité">
+			<h3>invité</h3>
+		</div>
+	</div>
+	
     <div class="game-container">
         <div class="status" id="status">C'est au tour de X</div>
         
