--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="boutons">
 			<a href="./pages_html/morpionLocal.html"><div class="btn" >LOCAL</div></a>
 			<div class="btn">ONLINE</div>
-			<div class="btn">ORDINATEUR</div>
+			<a href="./pages_html/morpionOrdi.html"><div class="btn">ORDINATEUR</div></a>
 		</div>
 	</body>
 </html>
