--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
 			<div class="btn">ONLINE</div>
 			<a href="./pages_html/morpionOrdi.html"><div class="btn">ORDINATEUR</div></a>
 		</div>
+		<div class="overlay" id="overlay"></div>
+
+		<!-- Popup de notification -->
+		<div class="popup" id="notificationPopup">
+			<h3>Fonctionnalité indisponible</h3>
+			<p>Le mode ONLINE n'est pas disponible pour le moment. Veuillez réessayer ultérieurement.</p>
+			<button class="close-btn" id="closeButton">Fermer</button>
+		</div>
 	</body>
 </html>
